Latest update - completed full authentication with network dictator

--- a/public/assets/css/media-queries.css
+++ b/public/assets/css/media-queries.css
@@ -23,7 +23,7 @@
     .mobile-nav{
         min-height: 600px;
         width: 50%;
-        background: #054a7e;
+        background: #29a645;
         position: fixed;
         z-index: 1;
         height: 100%;
